test/files/neg/macro-invalidusage-methodvaluesyntax/Macros_Test_2.scala
object Macros {
  def foo: Unit = macro Impls.foo
}

object Test extends App {
  val firstClassFoo = Macros.foo _
  firstClassFoo
}